@startuml
title Ó°Æ¬×âÁÞ

class Movie {
	-int priceCode
	+double getCharge(int daysRented)
	+int getFrequentRenterPoints(int daysRented)
}

class Rental {
	-int daysRented
	+double getCharge()
	+int getFrequentRenterPoints()
}

class Customer {
	+void statement()
	-double getCharge()
	-int getTotalFrequentRenterPoints()
}

Rental "*" <-- "1" Movie
Rental "*" --> "1" Customer
@enduml